IE11 fix (table header cell text align left)

--- a/styles/components/table/table.scss
+++ b/styles/components/table/table.scss
@@ -15,6 +15,7 @@
 }
 
 .table__header {
+  text-align: left;
   font-weight: bold;
   border-top: solid 1px #e6e6e6;
   border-bottom: solid 1px #e6e6e6;
